# whisper-keys-engine

./: Cargo.toml  README.md  build.rs  install.sh
assets/Cream/: config.json  config_older.json
assets/nk-cream/: config.json
benches/: main.rs  packs.rs  player.rs
docker/: Dockerfile.linux-amd64  Dockerfile.linux-arm64  build-linux-arm64.sh
proto/: whisper.proto
scripts/: Dockerfile.linux-arm64  build-darwin-arm64.sh  build-linux-amd64.sh  build-linux-arm64.sh
src/: cli.rs  commands.rs  config_template.json  config_template.json5  key_wrapper.rs  keylogger.rs  lib.rs  main.rs  mechvibes.rs  packs.rs  player.rs  program_args.rs  server.rs
