[package]
name = "whisper-keys-engine"
version = "2.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
dialoguer = "0.11.0"
home = "0.5.5"
prost = "0.12.1"
rdev = "0.5.3"
rodio = "0.17.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tonic = "0.10.2"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
rayon = "1.8.0"

[build-dependencies]
tonic-build = "0.10.2"
