[package]
name = "whisper-keys-engine"
version = "2.2.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
dialoguer = "0.11.0"
home = "0.5.5"
prost = "0.13.1"
rdev = "0.5.3"
rodio = "0.19.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tonic = "0.12.0"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
rayon = "1.10.0"
json5 = "0.4.1"
rustc-hash = "1.1.0"
clap = { version = "4.5.9", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.0"

[dev-dependencies]
criterion = "0.5.1"
